--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
 	</div>
 	<div class="services-sec">
 		<div class="card-container">
-			<img src="img/about-fitness-edited.png">
+			<. src="./about-fitness-edited.png">
 		</div>
 		<div class="card-container">
 			<div class="service-card">
 				<div class="card-title">
-					<img src="img/weightlifter-silhouette-100x100.png">
+					<. src="./weightlifter-silhouette-100x100.png">
 					<h2>Weight Training</h2>
 				</div>
 				<p>Weight training uses weights for resistance to build strength, muscle mass, and endurance. Start with lighter weights and gradually increase the weight as you get stronger. Focus on proper form to avoid injury.</p>
 			</div>
 			<div class="service-card">
 				<div class="card-title">
-					<img src="img/exercise-100x100.png">
+					<. src="./exercise-100x100.png">
 					<h2>General Fitness</h2>
 				</div>
 				<p>General fitness is overall health and well-being. To improve it, exercise regularly, eat a healthy diet, and get enough sleep.</p>
 			</div>
 			<div class="service-card">
 				<div class="card-title">
-					<img src="img/weightlifting-100x100.png">
+					<. src="./weightlifting-100x100.png">
 					<h2>Functional Training</h2>
 				</div>
 				<p>Functional training is a term used to describe exercises that help you perform activities in everyday life more easily. These exercises typically use the whole body and emphasize core strength and stability. By mirroring the movements of your daily life, like squatting, reaching, or even carrying a heavy object, building functional strength can help increase your quality of life and reduce your risk of injury.</p>
@@ -104,13 +104,13 @@
 		<h1 class="section-title">Media Gallery</h1>
 		<div class="gallery-row">
 			<div class="gallery-card">
-				<img src="img/blog1.png">
+				<. src="./blog1.png">
 			</div>
 			<div class="gallery-card">
-				<img src="img/istockphoto-1089939832-612x612.jpg">
+				<. src="./istockphoto-1089939832-612x612.jpg">
 			</div>
 			<div class="gallery-card">
-				<img src="img/bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427.webp">
+				<. src="./bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427.webp">
 			</div>			
 		</div>		
 	</div>
@@ -121,7 +121,7 @@
 			<a href="#">Read More</a>
 		</div>
 		<div class="about-card">
-			<img src="img/team1.png">
+			<. src="./team1.png">
 		</div>
 
 	</div>
