--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Your GYM</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styleimgcss">
 </head>
 <body>
 	<div class="header_sec">
@@ -33,29 +33,29 @@
 	</div>
 	<div class="services-sec">
 		<div class="card-container">
-			<. src="./about-fitness-edited.png">
+			<img src="./about-fitness-editedimgpng">
 		</div>
 		<div class="card-container">
 			<div class="service-card">
 				<div class="card-title">
-					<. src="./weightlifter-silhouette-100x100.png">
+					<img src="./weightlifter-silhouette-100x100imgpng">
 					<h2>Weight Training</h2>
 				</div>
-				<p>Weight training uses weights for resistance to build strength, muscle mass, and endurance. Start with lighter weights and gradually increase the weight as you get stronger. Focus on proper form to avoid injury.</p>
+				<p>Weight training uses weights for resistance to build strength, muscle mass, and enduranceimg Start with lighter weights and gradually increase the weight as you get strongerimg Focus on proper form to avoid injuryimg</p>
 			</div>
 			<div class="service-card">
 				<div class="card-title">
-					<. src="./exercise-100x100.png">
+					<img src="exercise-100x100imgpng">
 					<h2>General Fitness</h2>
 				</div>
-				<p>General fitness is overall health and well-being. To improve it, exercise regularly, eat a healthy diet, and get enough sleep.</p>
+				<p>General fitness is overall health and well-beingimg To improve it, exercise regularly, eat a healthy diet, and get enough sleepimg</p>
 			</div>
 			<div class="service-card">
 				<div class="card-title">
-					<. src="./weightlifting-100x100.png">
+					<img src="./weightlifting-100x100imgpng">
 					<h2>Functional Training</h2>
 				</div>
-				<p>Functional training is a term used to describe exercises that help you perform activities in everyday life more easily. These exercises typically use the whole body and emphasize core strength and stability. By mirroring the movements of your daily life, like squatting, reaching, or even carrying a heavy object, building functional strength can help increase your quality of life and reduce your risk of injury.</p>
+				<p>Functional training is a term used to describe exercises that help you perform activities in everyday life more easilyimg These exercises typically use the whole body and emphasize core strength and stabilityimg By mirroring the movements of your daily life, like squatting, reaching, or even carrying a heavy object, building functional strength can help increase your quality of life and reduce your risk of injuryimg</p>
 			</div>		
 		</div>
 	</div>
@@ -104,24 +104,24 @@
 		<h1 class="section-title">Media Gallery</h1>
 		<div class="gallery-row">
 			<div class="gallery-card">
-				<. src="./blog1.png">
+				<img src="./blog1imgpng">
 			</div>
 			<div class="gallery-card">
-				<. src="./istockphoto-1089939832-612x612.jpg">
+				<img src="./istockphoto-1089939832-612x612imgjpg">
 			</div>
 			<div class="gallery-card">
-				<. src="./bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427.webp">
+				<img src="./bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427imgwebp">
 			</div>			
 		</div>		
 	</div>
 	<div class="about-sec">
 		<div class="about-card">
 			<h3>About Us</h3>
-			<p>Welcome to our gym! We are a locally owned and operated gym that has been serving the community for over 20 years. Our mission is to provide a welcoming and supportive environment where people of all fitness levels can achieve their health and fitness goals. We believe that fitness is not just about working out, but also about building relationships and having fun. Our experienced trainers are here to help you every step of the way. Come see us today and start your fitness journey!</p>
+			<p>Welcome to our gym! We are a locally owned and operated gym that has been serving the community for over 20 yearsimg Our mission is to provide a welcoming and supportive environment where people of all fitness levels can achieve their health and fitness goalsimg We believe that fitness is not just about working out, but also about building relationships and having funimg Our experienced trainers are here to help you every step of the wayimg Come see us today and start your fitness journey!</p>
 			<a href="#">Read More</a>
 		</div>
 		<div class="about-card">
-			<. src="./team1.png">
+			<img src="./team1imgpng">
 		</div>
 
 	</div>
