--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="service-card">
 				<div class="card-title">
-					<img src="exercise-100x100imgpng">
+					<img src="./exercise-100x100imgpng">
 					<h2>General Fitness</h2>
 				</div>
 				<p>General fitness is overall health and well-beingimg To improve it, exercise regularly, eat a healthy diet, and get enough sleepimg</p>
